tests/spec/parse/snapshots/range_to.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  fn test(arr: Slice<int>) { let head = arr[..3]; }
---
[
    Function {
        doc: None,
        attributes: [],
        name: "test",
        name_span: Span {
            file_id: 0,
            byte_offset: 4,
            byte_length: 4,
        },
        generics: [],
        params: [
            Binding {
                pattern: Identifier {
                    identifier: "arr",
                    span: Span {
                        file_id: 0,
                        byte_offset: 9,
                        byte_length: 3,
                    },
                    binding: None,
                },
                annotation: Some(
                    Constructor {
                        name: "Slice",
                        params: [
                            Constructor {
                                name: "int",
                                params: [],
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 20,
                                    byte_length: 3,
                                },
                            },
                        ],
                        span: Span {
                            file_id: 0,
                            byte_offset: 14,
                            byte_length: 10,
                        },
                    },
                ),
                ty: Var {
                    id: uninferred,
                },
            },
        ],
        return_annotation: Unknown,
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Definition(
            Block {
                items: [
                    Let {
                        binding: Binding {
                            pattern: Identifier {
                                identifier: "head",
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 32,
                                    byte_length: 4,
                                },
                                binding: None,
                            },
                            annotation: None,
                            ty: Var {
                                id: uninferred,
                            },
                        },
                        value: IndexedAccess {
                            expression: Identifier {
                                value: "arr",
                                ty: Var {
                                    id: uninferred,
                                },
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 39,
                                    byte_length: 3,
                                },
                                resolution: Unresolved,
                            },
                            index: Range {
                                start: None,
                                end: Some(
                                    Literal {
                                        literal: Integer {
                                            value: 3,
                                            text: None,
                                        },
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 45,
                                            byte_length: 1,
                                        },
                                    },
                                ),
                                inclusive: false,
                                ty: Var {
                                    id: uninferred,
                                },
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 43,
                                    byte_length: 3,
                                },
                            },
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 42,
                                byte_length: 5,
                            },
                            from_colon_syntax: false,
                        },
                        mode: Plain,
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 28,
                            byte_length: 19,
                        },
                    },
                ],
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 26,
                    byte_length: 24,
                },
            },
        ),
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 49,
        },
    },
]
