tests/spec/parse/snapshots/raw_string_in_slice.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  fn test() { let xs = [r"\d", r"\s", "plain"]; }
---
[
    Function {
        doc: None,
        attributes: [],
        name: "test",
        name_span: Span {
            file_id: 0,
            byte_offset: 4,
            byte_length: 4,
        },
        generics: [],
        params: [],
        return_annotation: Unknown,
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Definition(
            Block {
                items: [
                    Let {
                        binding: Binding {
                            pattern: Identifier {
                                identifier: "xs",
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 17,
                                    byte_length: 2,
                                },
                                binding: None,
                            },
                            annotation: None,
                            ty: Var {
                                id: uninferred,
                            },
                        },
                        value: Literal {
                            literal: Slice(
                                [
                                    Literal {
                                        literal: String {
                                            value: "\\d",
                                            raw: true,
                                        },
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 23,
                                            byte_length: 5,
                                        },
                                    },
                                    Literal {
                                        literal: String {
                                            value: "\\s",
                                            raw: true,
                                        },
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 30,
                                            byte_length: 5,
                                        },
                                    },
                                    Literal {
                                        literal: String {
                                            value: "plain",
                                            raw: false,
                                        },
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 37,
                                            byte_length: 7,
                                        },
                                    },
                                ],
                            ),
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 22,
                                byte_length: 23,
                            },
                        },
                        mode: Plain,
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 13,
                            byte_length: 32,
                        },
                    },
                ],
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 11,
                    byte_length: 37,
                },
            },
        ),
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 47,
        },
    },
]
